--- a/gntcapital.html
+++ b/gntcapital.html
@@ -15,17 +15,14 @@
       <link rel="stylesheet" type="text/css"  href='estilosportfolio.css' />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-      <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-      <![endif]-->
+
    </head>
    <div class="container-portfolio">
       <div class="wrapper-portafolio">
          <div class="title-portfolio">Global Next Trade</div>
          <div class="description-portfolio">Forex broker dedicated to providing its clients with tailor-made trading solutions.</div>
       </div>
-      <img class="banner-portfolio" src="/demo-images/vinil.png" alt="Landing page" />
+      <img class="banner-portfolio" src="/demo-images/gnt1.png" alt="Landing page" />
    </div>
    </div>
    </div>
