ultimo update de portfolio

--- a/diversify.html
+++ b/diversify.html
@@ -61,8 +61,8 @@
                                         <b>Project Name:</b>&nbsp;Diversify Exchange<br>
                                         <b>Tasks:</b>
                                         <ul>
-                                        <li>→ Build the brand and website for a company working in a similar creative field as ours.</li>
-                                        <li>→ Keep it simple for new potential users who are new to the digital asset market.</li>
+                                        <li>→ Build branded website.</li>
+                                        <li>→ Keep it simple for potential users new to the digital asset market.</li>
                                   </ul>
 
                                 </div>
