--- a/gnt.html
+++ b/gnt.html
@@ -55,17 +55,17 @@
                               <br>
                               <br>
                                 <div class="one_half ">
-
-
                                         <b>Project Name:</b>&nbsp;Global Next Trade<br>
                                         <b>Tasks:</b>
                                         <ul>
-                                        <li>→ Design landing page and webapp.</li>
-                                        <li>→ Understand the forex market.</li>
-                                        <li>→ Working along with stakeholders.</li>
-                                                                        </ul>
-
+                                        <li>→ Create a modern visual style.</li>
+                                        <li>→ Understand and research the forex market.</li>
+                                        <li>→ Identify elements that enable visual communication.</li>
+                                        <li>→ Collaborate with stakeholders and development team.</li>
+                                        </ul>
                                 </div>
+
+                               
                                 <div class="one_half last ">
                                     <b>Context</b>
                                     <p>Global Next Trade is one of the largest prime brokers in Latin America
@@ -74,10 +74,8 @@ Global Next Trade is winner of the International Finance Brokerage Awards 2019 f
 <br>
 <br>
 
-As a lead designer,  I started working on a redesign for the landing page and webapp changing trader's and customer's perception of the company.
+As a solo designer, after researching crypto websites trends on Dribbble, I got to work on the main website redesign for the landing page section in order to improve trader's perception of the company.
 Along the brand's visual communication.
-
-
 
 
 </p>
