--- a/gntcapital.html
+++ b/gntcapital.html
@@ -17,12 +17,12 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 
    </head>
-   <div class="container-portfolio">
+   <div class="gnt-portfolio">
       <div class="wrapper-portafolio">
          <div class="title-portfolio">Global Next Trade</div>
          <div class="description-portfolio">Forex broker dedicated to providing its clients with tailor-made trading solutions.</div>
+         <button class="content-button"><a href="https://gntcapital.com/en">Live website →</a></button>      
       </div>
-      <img class="banner-portfolio" src="/demo-images/gnt1.png" alt="Landing page" />
    </div>
    </div>
    </div>
@@ -35,14 +35,21 @@
                   <div class="portfolio-title">
                      <div class="subtitle">Project Name</div>
                      <div class="title3">Global Next Trade</div>
+                  <br>
+                  <div class="subtitle">Project duration</div>
+                  <div class="title3">4 months</div>
+                  <br>
+                  <div class="subtitle">Software</div>
+                  <div class="title3">Adobe XD, Adobe Illustrator</div>
                   </div>
                </div>
                <div class="one_last">
                   <div class="subtitle">Tasks</div>
                   <ul  class="texto">
-                     <li>→ Design landing page and webapp.</li>
-                     <li>→ Understand the forex market.</li>
-                     <li>→ Working along with stakeholders.</li>
+                     <li>→ Redesign and improve landing page and webapp.</li>
+                     <li>→ Understand and research the forex market.</li>
+                     <li>→ Identify the elements that allow the development of a visual language.</li>
+                     <li>→ Work along stakeholders and the development team.</li>
                   </ul>
                </div>
             </div>
@@ -55,9 +62,9 @@
                <div class="one_last">
                   <div class="texto">As the lead junior designer, one of the first
                      challenges was the lack of visual consistency and not a real brand 
-                     identity either, none of the primary brand colors were being used.
+                     identity either, none of the primary brand colors were being used.<br>
                   </div>
-                  <div class="bold">The solution? a redesign had to be done, to create a more professional intuitive look for traders and investors.</div>
+                  <div class="bold">The solution?  Creating the website as clear, memorable and stylish as possible while unifying the brand's vision.</div>
                </div>
             </div>
          </div>
