--- a/indexProduct.html
+++ b/indexProduct.html
@@ -155,7 +155,7 @@
                             <section class="cards">
                                 <article class="card card--7">
                                     <div class="card__img"></div>
-                                    <a href="./joined.html" class="card_link">
+                                    <a href="./efevoo.html" class="card_link">
                                         <div class="card__img--hover"></div>
                                          <div class="card__info">
                                              <span class="card__category"> 
