--- a/pancho.html
+++ b/pancho.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
    <head>
-      <title>Global Next Trade</title>
+      <title>Pancho Nautico</title>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="shortcut icon" href="images/favicon.png" />
@@ -17,7 +17,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 
    </head>
-   <div class="container-portfolio">
+   <div class="pancho-portfolio">
       <div class="wrapper-portafolio">
          <div class="title-portfolio">Pancho Nautico</div>
          <div class="description-portfolio">Blending a marine concept with mexican cuisine.</div>
@@ -38,6 +38,12 @@
                   <div class="portfolio-title">
                      <div class="subtitle">Project Name</div>
                      <div class="title3">Pancho Nautico</div>
+                     <br>
+                     <div class="subtitle">Project duration</div>
+                     <div class="title3">1 month</div>
+                     <br>
+                  <div class="subtitle">Software</div>
+                  <div class="title3">Adobe Illustrator, Photoshop</div>
                   </div>
                </div>
                <div class="one_last">
@@ -56,7 +62,7 @@
                </div>
                <div class="one_last">
                   <div class="texto">Designing this project in just 2 weeks, I immediatly started sketching a fun character that could adapt to the ocean.
-                      The marine concept cames out of the salsa's unique flavour. 
+                      <br> Inspired by Pancho Nautico's original unique salsa made with shrimp, reflecting a marine concept gains more importance to the brand identity. 
                   </div>
                </div>
             </div>
