--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <div class="bannerbg">
       <div class="banner">
          <div class="wrapper">
-            <span class="about">Hello, I'm Brenda Orozco </span>
+            <span class="about">Hello, I'm Brendafsdfsdf Orozco </span>
             <div class="about2">Currenly based in Mexico</div>
             <h2 class="description">I'm a SaaS Product Designer enhancing the relationship between human interaction and technology.</h2>
 
