fix kepler imgs

--- a/kepler.html
+++ b/kepler.html
@@ -49,7 +49,7 @@
                   </ul>
                </div>
             </div>
-            <img src="demo-images/kepleruno.png" alt="Landing page" />
+            <img src="demo-images/kepler-1.png" alt="Landing page" />
             <div class="grid_one">
                <div class="one_first">
                   <div class="subtitle">About</div>
@@ -63,7 +63,7 @@
             </div>
          </div>
       </div>
-         <img class="cabinet" src="demo-images/keplerdos.png" alt="Webapp" />
+         <img class="cabinet" src="demo-images/kepler-2.png" alt="Webapp" />
     </div>
    </div>
    <!--Footer-->
