adds selfie, adds resume

--- a/me.html
+++ b/me.html
@@ -30,8 +30,8 @@
          <div class="content-wrap">
             <div class="grid_one">
                <div class="one_first">
-                  <img src="http://placekitten.com/500/650" />
-                  <div class="tags">
+                  <img class="selfie" src="demo-images/selfie.png" alt="me" />
+                                    <div class="tags">
                   <span class="tag">🤝 Motivated to take challenges</span>
                   <span class="tag">👁 Attention to detail</span>
                   <span class="tag">🌿 Atomic Design thinking</span>
