fix btn about me on index

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
    <div class="bannerbg">
       <div class="banner">
          <div class="wrapper">
-            <span class="about">Hello, I'm Brendafsdfsdf Orozco </span>
+            <span class="about">Hello, I'm Brenda Orozco </span>
             <div class="about2">Currenly based in Mexico</div>
             <h2 class="description">I'm a SaaS Product Designer enhancing the relationship between human interaction and technology.</h2>
                <div class="container-btn">
-                  <a class="btn btn-2">About me👋</a>
+                  <a class="btn btn-2" href="./me.html">About me👋</a>
                </div>    
             </div>  
             <div class="social">    
