adds new selfie

--- a/me.html
+++ b/me.html
@@ -30,7 +30,7 @@
          <div class="content-wrap">
             <div class="grid_one">
                <div class="one_first">
-                  <img class="selfie" src="demo-images/selfie.png" alt="me" />
+                  <img class="selfie" src="demo-images/me.jpg" alt="me" />
                                     <div class="tags">
                   <span class="tag">🤝 Motivated to take challenges</span>
                   <span class="tag">👁 Attention to detail</span>
