--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
         <li><a href="./me.html" >About me</a></li>
-        <li><a class="link"  href="./demo-images/resume.pdf" download="BrendaOrozcoResume">My resume</a></li>
+        <li><a class="link" href="./demo-images/BrendaOrozcoResume.pdf" download="BrendaOrozcoResume">My resume</a></li>
       </ul>
    </header>
    <div class="bannerbg">
