--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="banner">
          <div class="wrapper">
             <span class="about">Hello, I'm Brenda Orozco </span>
-            <div class="about2">Currenly based in Mexico</div>
+            <div class="about2">Currently based in Coahuila, Mexico</div>
             <h2 class="description">I'm a SaaS Product Designer enhancing the relationship between human interaction and technology.</h2>
                <div class="container-btn">
                   <a class="btn btn-2" href="./me.html">About me👋</a>
@@ -136,21 +136,21 @@
          </article>
       </section>
    </div>
-           <div class="six">
-              <section class="cards">
-                 <article class="card card--6">
-                    <div class="card__img"></div>
-                    <a href="./pancho.html" class="card_link">
-                       <div class="card__img--hover"></div>
-                       <div class="card__info">
-                          <span class="card__category">
-                             <h3 class="card__title__center">Brand design</h3>
-                          </span>
-                       </div>
-                    </a>
-                 </article>
-              </section>
-           </div>
+   <div class="six">
+      <section class="cards">
+         <article class="card card--6">
+            <div class="card__img"></div>
+            <a href="./pancho.html" class="card_link">
+               <div class="card__img--hover"></div>
+               <div class="card__info">
+                  <span class="card__category">
+                     <h3 class="card__title__center">Brand design</h3>
+                  </span>
+               </div>
+            </a>
+         </article>
+      </section>
+   </div>
            <div class="seven">
               <section class="cards">
                  <article class="card card--7">
