--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                      <div class="card__img--hover"></div>
                      <div class="card__info">
                         <span class="card__category"> 
-                        <h3 class="card__title">Visual Concept</h3>
+                        <h3 class="card__title">GNT Capital</h3>
                         <span class="card__by">Cryptocurrency trading platform</span>
                      </div>
                   </a>
@@ -77,7 +77,8 @@
                      <div class="card__img--hover"></div>
                      <div class="card__info">
                         <span class="card__category">
-                           <h3 class="card__title">UI — HTML&CSS3</h3>
+                           <h3 class="card__title">Kepler180</h3>
+                           <span class="card__by">HTML&CSS</span>
                         </span>
                      </div>
                   </a>
@@ -92,8 +93,8 @@
                      <div class="card__img--hover"></div>
                      <div class="card__info">
                         <span class="card__category">
-                           <h3 class="card__title">From Sketch to React styled components</h3>
-                           <span class="card__by">for the transportation industry</span>
+                           <h3 class="card__title">Peninsula Ejecutivo</h3>
+                           <span class="card__by">React styled-components</span>
                         </span>
                      </div>
                   </a>
@@ -108,8 +109,8 @@
                      <div class="card__img--hover"></div>
                      <div class="card__info">
                         <span class="card__category">
-                           <h3 class="card__title">Storybook Elements meets Atomic Design</h3>
-                           <span class="card__by">Components designed from Sketch to Storybook</span>
+                           <h3 class="card__title">Primeraplus</h3>
+                           <span class="card__by">UX improvements</span>
                         </span>
                      </div>
                   </a>
@@ -129,22 +130,7 @@
                <div class="card__img--hover"></div>
                <div class="card__info">
                   <span class="card__category">
-                     <h3 class="card__title__center">Brand & UI Design</h3>
-                  </span>
-               </div>
-            </a>
-         </article>
-      </section>
-   </div>
-   <div class="six">
-      <section class="cards">
-         <article class="card card--6">
-            <div class="card__img"></div>
-            <a href="./pancho.html" class="card_link">
-               <div class="card__img--hover"></div>
-               <div class="card__info">
-                  <span class="card__category">
-                     <h3 class="card__title__center">Brand design</h3>
+                     <h3 class="card__title__center">Joined</h3>
                   </span>
                </div>
             </a>
@@ -155,16 +141,16 @@
               <section class="cards">
                  <article class="card card--7">
                     <div class="card__img"></div>
-                    <a href="./efevoo.html" class="card_link">
+                     <a href="./efevoo.html" class="card_link">
                        <div class="card__img--hover"></div>
                        <div class="card__info">
                           <span class="card__category">
-                             <h3 class="card__title__center">Concept design</h3>
+                             <h3 class="card__title__center">Efevoo</h3>
                           </span>
                        </div>
                     </a>
-                 </article>
-              </section>
+                  </article>
+               </section>
            </div>
         </div>
       </div>
