--- a/kepler.html
+++ b/kepler.html
@@ -18,45 +18,60 @@
 
    </head>
    <div class="kepler-portfolio">
-      <div class="wrapper-portafolio">
-         <div class="title-portfolio">Kepler180</div>
-         <button class="content-button"><a href="https://kepler180.com/">Live website →</a></button>  
-      </div>
+      
    </div>
 
    <div class="body-wrapper">
       <div id="content" class="site-content content-1170 center-relative">
          <div class="content-wrap">
-            <div class="grid_one">
-               <div class="one_first">
-                  <div class="portfolio-title">
-                     <div class="subtitle">Project Name</div>
-                     <div class="title3">Kepler180</div>
-                     <br>
-                     <div class="subtitle">Project duration</div>
-                     <div class="title3">2 month</div>
-                     <br>
-                  <div class="subtitle">Software</div>
-                  <div class="title3">Adobe XD, Adobe Illustrator</div>
-                  </div>
+
+            <div class="one_first">
+               <div class="portfolio-title">
+                  <div class="title3">Project Summary</div>
+                  <br>
+                  <div class="text-wrapper">
+                     <div>
+                        <div class="subtitle">Project duration</div>
+                        <div class="title4">Two months</div>
+                     </div>
+                     <div>
+                        <div class="subtitle">Project team</div>
+                        <div class="title4">Front-End and Project lead</div>
+                     </div>
+                     <div>
+                        <div class="subtitle">My role</div>
+                        <div class="title4">I was involved in the entire process, user research, UI design and brand visual design.</div>
+                     </div>
+                     <div>
+                        
+                           <button class="content-button"><a href="https://kepler180.com/">Live website →</a></button>
+                     </div> 
+                  <div> 
                </div>
+            </div>
                <div class="one_last">
-                  <div class="subtitle">Tasks</div>
+                  <div class="title3">Responsabilities</div>
                   <ul  class="texto">
-                    <li>→ Creating a concept from scratch.</li>
-                    <li>→ Learn HTML,CSS and media queries to build a landing page.</li>
-                    <li>→ Provide a quick solution for web positioning.</li>
+                     <li>→ Participating and document design reviews with the development team.</li>
+                    <li>→ Learning HTML and CSS media queries to build a responsive landing page.</li>
+                    <li>→ Create and present wireframes, and user flows, keeping business outcomes in mind.</li>
+                    <li>→ Time management meeting project deadlines to work on multiple projects and deliver quality designs in a short time.</li>
+                    <li>→ Provide illustrative visual assets for emailing and blogs.</li>
+                    <li>→ Design moodboards, and style guides developing and communicating a strong concept.</li>
                   </ul>
                </div>
             </div>
             <img src="demo-images/kepler-1.png" alt="Landing page" />
             <div class="grid_one">
                <div class="one_first">
-                  <div class="subtitle">About</div>
-                  <div class="title3">Design to HTML/CSS</div>
+                  <div class="about">Kepler180 is a technology startup accellerating local companies growth digitally.</div>
                </div>
                <div class="one_last">
-                  <div class="texto">Technology startup based in Monterrey, Mexico. The goal was to create a branded landing page working along the visual identity. Coming from the GNT Capital Family, Kepler180 was looking for a balance between simple and informative landing page to reach out to their clients. While positioning itself as a consistent tech brand.<br>
+                  <div class="texto">
+                     The main goal was to create a branded landing page working along the visual identity. 
+                     Coming from the GNT Capital Family, Kepler180 was looking for a balance 
+                     between simple and informative landing page to reach out to their clients. 
+                     While positioning itself as a consistent tech brand.<br>
                   </div>
                   <div class="bold">Designing the website layout and creating the responsive HTML and CSS code along the way was one of the best challenges I've had as a User Interface designer.</div>
                </div>
