--- a/peninsula.html
+++ b/peninsula.html
@@ -17,70 +17,67 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 
    </head>
-   <div class="kepler-portfolio">
-      <div class="wrapper-portafolio">
-         <div class="title-portfolio">Peninsula Ejecutivo</div>
-         <button class="content-button"><a href="https://www.peninsulaejecutivo.com.mx/">Live website →</a></button>  
-      </div>
-   </div>
+   <div class="peninsula-portfolio"></div>
 
    <div class="body-wrapper">
       <div id="content" class="site-content content-1170 center-relative">
          <div class="content-wrap">
             <div class="grid_one">
                <div class="one_first">
-                  <div class="portfolio-title">
-                     <div class="subtitle">Project Name</div>
-                     <div class="title3">Peninsula Ejecutivo</div>
-                     <br>
-                     <div class="subtitle">Project duration</div>
-                     <div class="title3">1 month</div>
-                     <br>
-                  <div class="subtitle">Tools</div>
-                  <div class="title3">Sketch, Visual Studio Code, Storybook Elements</div>
+                  <div class="title3">Project Summary</div>
+                  <br>
+                  <div class="text-wrapper">
+                     <div>
+                        <div class="subtitle">Project duration</div>
+                        <div class="title4">Two months</div>
+                     </div>
+                     <div>
+                        <div class="subtitle">Project team</div>
+                        <div class="title4">Lead Product Design Lead, Front-End, Back-End, Project Manager</div>
+                     </div>
+                     <div>
+                        <div class="subtitle">My role</div>
+                        <div class="title4">User research, UI design, UX design</div>
+                     </div>
+                     <div>
+                        <button class="content-button"><a href="https://www.peninsulaejecutivo.com.mx/">Live website →</a></button>
+                     </div>
                   </div>
-               </div>
-               <div class="one_last">
-                  <div class="subtitle">Tasks</div>
-                  <ul  class="texto">
-                    <li>→ Engage users with an intuitive screen-friendly interface.</li>
-                    <li>→ Create a consistent layout design that can scale up easily.</li>
-                    <li>→ Collaborate with dedicated design team focused on internal design systems</li>
-                  </ul>
-               </div>                   
-
+               </div>             
             </div>
-            <img src="demo-images/peninsulacabinet.png" alt="Landing page" />
-            <img class="cabinet" src="demo-images/peninsulamobile.png" alt="Mobile design" />
 
-            <div class="grid_one">
-               <div class="one_first">
-                  <div class="subtitle">About</div>
-                  <div class="title3">Intro to SaaS product design</div>
-               </div>
-               <div class="one_last">
-                  <div class="subtitle">About The Design Process:</div>
-                     <ul  class="texto">
-                     <li>Empathize with users looking to compare and easily book local bus tickets online.</li>
-                     <li>Follow an already existing component-based design.</li>
-                     <li>Define landing page layout structure and ideate new features.</li>
+            <div class="one_last">
+               <div class="title3">Responsabilities</div>
+               <ul  class="texto">
+                 <li>→ Engage users with an intuitive screen-friendly interface.</li>
+                 <li>→ Create a consistent layout design that can scale up easily.</li>
+                 <li>→ Collaborate with dedicated design team focused on internal design systems</li>
+               </ul>
+            </div>  
+            <div class="one_last">
+               <div class="subtitle">About The Design Process:</div>
+                  <ul  class="texto">
+                     <li>• Empathize with users looking to compare and easily book local bus tickets online.</li>
+                     <li>• Follow an already existing component-based design.</li>
+                     <li>• Define landing page layout structure and ideate new features.</li>
+                     <li>• Responsive screens</li>
+
                   </ul>
-                  </div>
                </div>
+            </div> <div class="grid_one">
                <div class="boldcenter">As previously stand alone designer, I had the opportunity to improve my design process. 
                   Instead of layouts from scratch, component-based ideation improves user interface development time.</div>
                <br>
-
                <br>
-               <br>
-               <br>
-              <div class="texto">I was in charge of the creation of Peninsula's Symbols, Layer Styles, and Text Styles in Sketch.</div>
+              <div class="texto">I was in charge of the creation of Peninsula's Symbols, Layer Styles, and Text Styles in Sketch, based on an existing design system.</div>
                <img class="cabinet" src="demo-images/sketch.png" alt="Sketch workspace" />
-               <div class="texto">Stakeholders prefer high-fidelity mockups</div>
+               <div class="texto">Stakeholders prefer high-fidelity to directly test and aprove a final result </div>
                <img class="cabinet" src="demo-images/sketch-peninsula.png" alt="High-fidelity mockups" />
 
                </div>
-            </div>
+            </div>    
+            <img src="demo-images/peninsulacabinet.png" alt="Landing page" />
+            <img class="cabinet" src="demo-images/peninsulamobile.png" alt="Mobile design" />
          </div>
       </div>
     </div>
