--- a/components.html
+++ b/components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
    <head>
-      <title>Components</title>
+      <title>Primera Plus GFA</title>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="shortcut icon" href="images/favicon.png" />
@@ -43,6 +43,9 @@
                      <div class="subtitle">My role for this project</div>
                      <div class="title4"> UI Designer, UI developer</div>
                   </div>
+                  <div>
+                        <button class="content-button"><a href="https://wl.primeraplus.com.mx/">Live website →</a></button>
+                     </div>
                   </div>
                </div>
       
