--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <div class="banner">
          <div class="wrapper">
             <span class="about">Hello, I'm Brenda Orozco </span>
-            <div class="about2">Currently based in Coahuila, Mexico</div>
             <h2 class="description">I'm a SaaS Product Designer enhancing the relationship between human interaction and technology.</h2>
                <div class="container-btn">
                   <a class="btn btn-2" href="./me.html">About me👋</a>
@@ -120,6 +119,7 @@
         </div>
     </div>
 
+    <div >
 <h1 class="title2">Multidisciplary design background</h1>
 <div class="grid2">
    <div class="five">
@@ -155,6 +155,7 @@
         </div>
       </div>
     </div>
+   </div>
 </div>
 
       
