--- a/peninsula.html
+++ b/peninsula.html
@@ -53,8 +53,7 @@
                  <li>→ Create a consistent layout design that can scale up easily.</li>
                  <li>→ Collaborate with dedicated design team focused on internal design systems</li>
                </ul>
-            </div>  
-            <div class="one_last">
+               <br>
                <div class="subtitle">About The Design Process:</div>
                   <ul  class="texto">
                      <li>• Empathize with users looking to compare and easily book local bus tickets online.</li>
@@ -68,15 +67,19 @@
                <div class="boldcenter">As previously stand alone designer, I had the opportunity to improve my design process. 
                   Instead of layouts from scratch, component-based ideation improves user interface development time.</div>
                <br>
-               <br>
               <div class="texto">I was in charge of the creation of Peninsula's Symbols, Layer Styles, and Text Styles in Sketch, based on an existing design system.</div>
                <img class="cabinet" src="demo-images/sketch.png" alt="Sketch workspace" />
                <div class="texto">Stakeholders prefer high-fidelity to directly test and aprove a final result </div>
                <img class="cabinet" src="demo-images/sketch-peninsula.png" alt="High-fidelity mockups" />
 
                </div>
-            </div>    
-            <img src="demo-images/peninsulacabinet.png" alt="Landing page" />
+            </div>  
+            <div class="one_last">
+            <div class="boldcenter">Website from Sketch to React</div>  
+            <img class="cabinet"src="demo-images/peninsulacabinet.png" alt="Landing page" />
+         </div>
+
+            <div class="boldcenter">Mobile screen-friendly </div>
             <img class="cabinet" src="demo-images/peninsulamobile.png" alt="Mobile design" />
          </div>
       </div>
