fix primeraplus index img

--- a/components.html
+++ b/components.html
@@ -95,7 +95,7 @@
                   <div class="texto">
                      Investigation and research are part of every of my design decisions, this is a list with:
                      <br>
-                     My key thoughts and ideas before the decision of a redesign
+                     <b>My key thoughts and ideas before the decision of a redesign</b>
                      <li> This drop-down does not cause an important impression</li>
                      <li> Keywords are hidden from the user</li>
                      <li> The arrow icon that indicates more options in this drop-down design is not visible</li>
